Adds a single fit request endpoint Improves docs
